<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PlaylistDetailsActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backBtnPD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/back_icon"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tvPlalistNamePD"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:padding="@dimen/dimen_10dp"
            android:src="@drawable/back_icon"
            android:visibility="invisible"
            app:tint="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayoutDetails"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:layout_margin="@dimen/dimen_10dp"
        android:layout_height="@dimen/dimen_180dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="@dimen/dimen_250dp"
            android:id="@+id/playlistImgPD"
            android:src="@drawable/music_player_icon"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tvMoreInfo"
            android:text="@string/playlist_name"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlistDetailsRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:paddingBottom="@dimen/dimen_280dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutDetails" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addSongBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/add_icon"
            android:text="@string/add_song"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary" />

        <Button
            android:id="@+id/removeSongBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/remove_icon"
            android:textAllCaps="false"
            android:text="@string/remove_song"
            android:textColor="?attr/colorPrimary" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>